--- a/这是个人在需要时使用的常用站点.md
+++ b/这是个人在需要时使用的常用站点.md
@@ -89,7 +89,9 @@ PPT
 * https://www.techspot.com/
 
 
-lotus123
+ipfs版-fq-book
+
+http://ipfs.io/ipfs/QmdjAUnrZu2a7YTzmUnYeKejPdoXw6wJZLyU4TyqMMHhfF
 
 
 注：`*`表示仅内容受到文明监控和谐审查时才使用
