--- a/这是个人在需要时使用的常用站点.md
+++ b/这是个人在需要时使用的常用站点.md
@@ -2,6 +2,10 @@
 
 * http://www.zdfans.com/7639.html
 
+aria2c控制台
+
+http://aria2c.com/
+
 看电影
 
 * http://127.0.0.1:43110/1PLAYgDQboKojowD3kwdb3CtWmWaokXvfp/
