--- a/科学上网/浏览器.md
+++ b/科学上网/浏览器.md
@@ -1,6 +1,5 @@
 
-[opera](https://www.opera.com/zh-cn)
-  * [extension-source-viewer（opera的chrome扩展下载器）](https://addons.opera.com/zh-cn/extensions/details/extension-source-viewer/)
+
 
 [i2p](https://geti2p.net/zh/download)
 
@@ -9,3 +8,6 @@
 [puffin](https://www.puffinbrowser.com/)
 
 [vpnchrome](https://www.freevpn.pw/en/)
+
+<s>[opera](https://www.opera.com/zh-cn)</s> 失效
+  * [extension-source-viewer（opera的chrome扩展下载器）](https://addons.opera.com/zh-cn/extensions/details/extension-source-viewer/)
