--- a/这是个人在需要时使用的常用站点.md
+++ b/这是个人在需要时使用的常用站点.md
@@ -3,6 +3,10 @@
 * https://www.mirrorcreator.com
 * https://anonfile.com/
 
+在线杀毒
+
+* https://www.virustotal.com/zh-cn/
+
 歌词
 
 * https://mojim.com
