--- a/科学上网/浏览器.md
+++ b/科学上网/浏览器.md
@@ -9,5 +9,9 @@
 
 [vpnchrome](https://www.freevpn.pw/en/)
 
+[cocoon](https://getcocoon.com/support/download)
+
+[webfreer](https://www.webfreer.com/)
+
 <s>[opera](https://www.opera.com/zh-cn)</s> 失效
   * [extension-source-viewer（opera的chrome扩展下载器）](https://addons.opera.com/zh-cn/extensions/details/extension-source-viewer/)
