--- a/Test/测试性说明.md
+++ b/Test/测试性说明.md
@@ -1,4 +1,7 @@
-test
+近期无需账号保存资源的文件上传服务网站开始增多了，个人推测是 ipfs、cdn、短链接三者综合构建的服务，因为看这类型的网站介绍并不像即焚，不要轻易上传个人及他人的隐私资料就是了，对他人负责也是对自己负责（下方标题已说明）。
+
+也是最近，部分免费账号站点开始喜欢具有诱导性的夹带私货了，自行分辨就是了；必须通过注册推广及购买获取或是带有不纯的煽动信息的站点不考虑收录此 repo
+
 <!--
 经过测试，为了一个本就没有任何编程语言的项目，添加某种编程语言，一些类似掘金酱等热度排名的网站会有所收录，此外GitHub也会推荐一些人气较高的某种编程语言项目开发者，这的确项目热度会有所上升，引来更多的关注；类似于渣浪微博的性质，但不过不会像官方自嗨用僵尸自刷 following，这也解释了被关注的莫名奇妙。
 -->
