--- a/科学上网/浏览器.md
+++ b/科学上网/浏览器.md
@@ -1,5 +1,5 @@
 
-使用教程：https://loremwalker.github.io/fq-book/#/browse/puffin
+使用示例：https://loremwalker.github.io/fq-book/#/browse/puffin
 
 [i2p](https://geti2p.net/zh/download)
 
