--- a/这是个人在需要时使用的常用站点.md
+++ b/这是个人在需要时使用的常用站点.md
@@ -69,9 +69,18 @@ aria2c控制台
 * http://www.y8.com
 
 
-SSR订阅源
-
+ssr订阅源
+* https://www.nutgeek.cn/newsubscribe/
+* https://prom-php.herokuapp.com/cloudfra_ssr.txt
+* http://share-shadowsocks.herokuapp.com/full/subscribe
+* http://share-shadowsocksr.herokuapp.com/subscribe?valid=1
 * https://raw.githubusercontent.com/ImLaoD/sub/master/ssrshare.com
+
+telegram 订阅
+
+https://t.me/freeshadowsock  
+https://t.me/gyjclub  
+https://t.me/joinchat/AAAAAEvnT-th4YKBWoUjFw
 
 图床
 
