--- a/Test/测试性说明.md
+++ b/Test/测试性说明.md
@@ -1,4 +1,4 @@
-近期无需账号保存资源的文件上传服务网站开始增多了，个人推测是 ipfs、cdn、短链接三者综合构建的服务，因为看这类型的网站介绍并不像即焚，不要轻易上传个人及他人的隐私资料就是了，对他人负责也是对自己负责（下方标题已说明）。
+近期无需账号保存资源的文件上传服务网站开始增多了，个人推测是 ipfs、cdn、短链接三者综合构建的服务，因为看这类型的网站介绍并不像即焚，不要轻易上传个人及他人的隐私资料就是了，对他人负责也是对自己负责。
 
 也是最近，部分免费账号站点开始喜欢具有诱导性的夹带私货了，自行分辨就是了；必须通过注册推广及购买获取或是带有不纯的煽动信息的站点不考虑收录此 repo
 
