--- a/科学上网/浏览器.md
+++ b/科学上网/浏览器.md
@@ -9,6 +9,8 @@
 
 [vpnchrome](https://www.freevpn.pw/en/)
 
+[chrome修改版](https://free-vpn.github.io/chrome/)
+
 [cocoon](https://getcocoon.com/support/download)
 
 [webfreer](https://www.webfreer.com/)
