--- a/这是个人在需要时使用的常用站点.md
+++ b/这是个人在需要时使用的常用站点.md
@@ -86,7 +86,8 @@ https://t.me/joinchat/AAAAAEvnT-th4YKBWoUjFw
 
 * https://imgbox.com
 * https://imgur.com  
-* https://img9.top/  
+* https://sm.ms/
+* <s>https://img9.top/</s> （慢如蜗牛，不用了）  
 
 知识共享协议
 
