--- a/英语学习.md
+++ b/英语学习.md
@@ -5,3 +5,5 @@
 * http://www.feeteckonline.com/ 常用句
 * https://www.englisch-hilfen.de 查语法
 * https://jessielinhuiching.blog/2012/04/12/%E8%8B%B1%E8%AA%9E%E7%94%9F%E6%B4%BB%E6%85%A3%E7%94%A8%E8%AA%9E%E4%BA%8C/ 常用短句
+
+* https://hk.answers.yahoo.com/question/index?qid=20061114000051KK03235 日期序号
