--- a/科学上网/浏览器.md
+++ b/科学上网/浏览器.md
@@ -7,6 +7,8 @@
 
 [puffin](https://www.puffinbrowser.com/)
 
+[skyfire](https://www.skyfireapp.com/android)
+
 [vpnchrome](https://www.freevpn.pw/en/)
 
 [chrome修改版](https://free-vpn.github.io/chrome/)
