--- a/个人辅助工具（佛系）.md
+++ b/个人辅助工具（佛系）.md
@@ -2,6 +2,10 @@
 
 https://bigjpg.com/
 
+网页测试
+
+https://www.w3cschool.cn/tryrun/showhtml/tryhtml_headers
+
 平面图
 
 https://online.visual-paradigm.com/cn/diagrams/features/flowchart-tool/
