--- a/有趣的东西/因雀思婷.md
+++ b/有趣的东西/因雀思婷.md
@@ -2,6 +2,6 @@
 * [文章生成器](https://suulnnka.github.io/BullshitGenerator/index.html)
 * [自己在动漫中的样子](https://selfie2anime.com/)
 * [小黄人举牌生成器](http://upuptoyou.com)
-
 * [假装Windows升级](http://fakeupdate.net/)
 * [虚假截图（伪证）](https://fakes.netlify.app/#/sina/simple)
+* [回形针手册](https://ipaperclip.net/)
