--- a/有趣的东西/因雀思婷.md
+++ b/有趣的东西/因雀思婷.md
@@ -5,3 +5,4 @@
 * [假装Windows升级](http://fakeupdate.net/)
 * [虚假截图（伪证）](https://fakes.netlify.app/#/sina/simple)
 * [回形针手册](https://ipaperclip.net/)
+* [拍马屁生成器](https://chp.shadiao.app/)
