--- a/有趣的东西/因雀思婷.md
+++ b/有趣的东西/因雀思婷.md
@@ -1,8 +1,15 @@
 
+* [考试酷](https://www.examcoo.com/index/ku)
 * [文章生成器](https://suulnnka.github.io/BullshitGenerator/index.html)
 * [自己在动漫中的样子](https://selfie2anime.com/)
+* [拍马屁生成器](https://chp.shadiao.app/)
 * [小黄人举牌生成器](http://upuptoyou.com)
 * [假装Windows升级](http://fakeupdate.net/)
-* [虚假截图（伪证）](https://fakes.netlify.app/#/sina/simple)
+* [虚伪截图](https://fakes.netlify.app/#/sina/simple)
 * [回形针手册](https://ipaperclip.net/)
-* [拍马屁生成器](https://chp.shadiao.app/)
+* [文字云图片](https://wordart.com/)
+* [背景消除](https://www.remove.bg/zh)
+* [猫咪论文](https://lunwen.im/)
+* [书籍下载](https://book.tstrs.me/)
+* [白噪音](https://raining.fm/#)
+* [火狐私密文件分享](https://send.firefox.com/)
