--- a/有趣的东西/因雀思婷.md
+++ b/有趣的东西/因雀思婷.md
@@ -13,3 +13,5 @@
 * [书籍下载](https://book.tstrs.me/)
 * [白噪音](https://raining.fm/#)
 * [火狐私密文件分享](https://send.firefox.com/)
+* [「标签式」 文件资料 管理利器](http://www.taglyst.com/)
+* [英文缩写查询](http://shortof.com/search/luceneapi_node/TGIF)
