--- a/辅助工具链.md
+++ b/辅助工具链.md
@@ -13,6 +13,11 @@
 
 [汉斯-企业管理者思维的核心要素及塑造策略](https://image.hanspub.org/Html/7-1120814_27813.htm)
 
+短连接生成
+
+https://sina.lt/
+
+
 大河马百度资源下载
 
 www.daihema.com
