--- a/有趣的东西（致郁）/怎么提高信息转化率.MD
+++ b/有趣的东西（致郁）/怎么提高信息转化率.MD
@@ -8,4 +8,6 @@ https://wiki.mbalib.com/wiki/%E4%BF%A1%E6%81%AF%E8%B5%84%E6%BA%90%E7%AE%A1%E7%90
 
 https://wiki.mbalib.com/wiki/%E4%BC%81%E4%B8%9A%E4%BF%A1%E6%81%AF%E9%9B%86%E6%88%90
 
-[如何成为毛泽东一样的奇男子？ ](https://zhuanlan.zhihu.com/p/266291344)
+* [如何成为毛泽东一样的奇男子？ ](https://zhuanlan.zhihu.com/p/266291344)
+* [在哪里能找到各行业的分析研究报告？](https://www.zhihu.com/question/19766160/answer/179241024)
+
