--- a/软件分享及网页备份/wps2016.md
+++ b/软件分享及网页备份/wps2016.md
@@ -1,7 +1,5 @@
 ### WPS2016政府及院校版
 
-该部分搬运 至 getquicker的 [M-cc](https://getquicker.net/QA/Question/11206) ，帖子里的链接并不是全都有效，我筛选了有效留存也就四个链接。这些版本不需要license，直接安装就能用的。
-
 [大祥区党政门户网-办事大厅](http://info.dxzc.gov.cn/Item/21126.aspx)
 
 ![](https://s2.xptou.com/2023/04/04/642bd00fc01d0.png)
@@ -24,7 +22,7 @@ WPS2016 绿色，小巧、占内存低；功能全，且兼容性好。尤其在
 
 蓝奏云：https://wwi.lanzoup.com/ijkWG0s2dwcd
 
-我在论坛也找到一篇【精品软件区】也找到相关的帖子 [拒绝百度网盘WPS2016  pro plus  官方最后一个版本，分享给大家附序列号](https://www.52pojie.cn/thread-1073494-1-1.html) ，我测试了下其序列号，另外坛友 [wps2016pro版带vbs](https://www.52pojie.cn/thread-1073535-1-1.html) 也是可以激活的，license 均已 OK。
+[拒绝百度网盘WPS2016  pro plus  官方最后一个版本，分享给大家附序列号](https://www.52pojie.cn/thread-1073494-1-1.html) 、[wps2016pro版带vbs](https://www.52pojie.cn/thread-1073535-1-1.html) 也是可以激活的，license 均已 OK。
 
 license：
 
@@ -48,9 +46,4 @@ license：
 
 ### WPS2016 便携版
 
-该版由坛友贡献，本人负责整合收集到资料。
-
-方便PE U盘随身携带：
-
-* [【 吾爱破解论坛】 - wps2016绿色版 可移动版](https://www.52pojie.cn/thread-1132914-1-1.html)
-* [【吾爱破解论坛】- WPS2016单文件极简版（不足32M），适合压箱底收藏](https://www.52pojie.cn/thread-1606129-1-1.html)
+方便PE U盘随身携带：[【 吾爱破解论坛】 - wps2016绿色版 可移动版](https://www.52pojie.cn/thread-1132914-1-1.html)、[【吾爱破解论坛】- WPS2016单文件极简版（不足32M），适合压箱底收藏](https://www.52pojie.cn/thread-1606129-1-1.html)
