--- a/软件分享及网页备份/wps2016.md
+++ b/软件分享及网页备份/wps2016.md
@@ -1,4 +1,3 @@
-### WPS2016政府及院校版
 
 [大祥区党政门户网-办事大厅](http://info.dxzc.gov.cn/Item/21126.aspx)
 
@@ -16,9 +15,7 @@
 
 ![](https://s2.xptou.com/2023/04/04/642bd0f6c2b18.png)
 
-### WPS2016 常规版
-
-WPS2016 绿色，小巧、占内存低；功能全，且兼容性好。尤其在软件国产化的当下，深受广大网民欢迎。[拒绝百度网盘WPS2016  pro plus  官方最后一个版本，分享给大家附序列号](https://www.52pojie.cn/thread-1073494-1-1.html) 、[wps2016pro版带vbs](https://www.52pojie.cn/thread-1073535-1-1.html) 也是可以激活的，license 均已 OK。
+WPS2016 绿色，小巧、占内存低；功能全，且兼容性好。尤其在软件国产化的当下，深受广大网民欢迎。[拒绝百度网盘WPS2016  pro plus  官方最后一个版本，分享给大家附序列号](https://www.52pojie.cn/thread-1073494-1-1.html) 、[wps2016pro版带vbs](https://www.52pojie.cn/thread-1073535-1-1.html) 也是可以激活的，license 均已 OK。方便PE U盘随身携带：[wps2016绿色版](https://www.52pojie.cn/thread-1132914-1-1.html)、[WPS2016单文件极简版（不足32M），适合压箱底收藏](https://www.52pojie.cn/thread-1606129-1-1.html)。PS，WPS会记住这些批量测试的序列号，卸载并删掉`"C:\ProgramData\kingsoft\office6\license2.dat"`的文件夹，再安装就行了。
 
 license：
 
@@ -32,14 +29,8 @@ license：
 * 7LR67-WTXPA-KLUHV-GEK2E-QW4CK
 * EUYTH-3KWKL-PJMX7-XBCPW-9U2DD
 
-有意思的是，WPS会记住这些批量测试的序列号，如图
 
-![](https://files.catbox.moe/hbqett.png)
 
-卸载并删掉`"C:\ProgramData\kingsoft\office6\license2.dat"`的文件夹，再安装就行了。
 
-![](https://files.catbox.moe/kzuc40.png)
 
-### WPS2016 便携版
 
-方便PE U盘随身携带：[wps2016绿色版](https://www.52pojie.cn/thread-1132914-1-1.html)、[WPS2016单文件极简版（不足32M），适合压箱底收藏](https://www.52pojie.cn/thread-1606129-1-1.html)
