--- a/サイレントマジョリティー/僕は存在していなかった.ipynb
+++ b/サイレントマジョリティー/僕は存在していなかった.ipynb
@@ -481,6 +481,85 @@
     "\n",
     "另外，我们也可以对某些事件进行深入调查和研究，以更好地理解其中的内涵和背后的问题。不过，进行调查需要具备相应的专业知识和方法，建议在进行调查之前，充分准备和学习相关知识，避免走入误区。\n",
     "\n",
+    "为什么统计局表态一小时工作的不算失业？\n",
+    "---\n",
+    "一小时工作的人不被计算在失业人口中，可能会被一些人认为是不符合常理的。然而，国家统计局这么做有其合理性。\n",
+    "\n",
+    "首先，失业是指正在寻找工作但无法找到工作的人，而工作一小时的人并没有表现出这样的失业状态。在经济学中，失业指的是劳动力市场中某一时期内有能力和意愿工作的人群寻找工作但没有找到的人数。因此，如果一个人有工作机会并且接受了一小时的工作，这并不意味着他或她是一个失业者。\n",
+    "\n",
+    "其次，失业人数是一个在时间和地理范围内变化的指标。失业率是一种反映就业市场条件的重要指标，但它不应该是国家的唯一就业市场衡量标准。失业率只是衡量就业市场问题的重要指标之一。它并不能反映就业市场的全部信息，就业的质量、工资、工时、保险和福利等方面也可以直接或间接地反应就业市场状况。国家统计局还可能会考虑其他指标来评估就业市场。\n",
+    "\n",
+    "总的来说，国家统计局认为只工作一小时的人并不能被视为失业人口，因为这些人并没有表现出正在寻找工作但无法找到的状态。这样的定义可能会让一些人感到有些争议，但是国家统计局采取的方法是根据国际上通行的定义和标准，所以在一定程度上可以认为是符合常理的。\n",
+    "\n",
+    "我在看了[《失业率定义的国际比较及中国城镇失业率》](http://ft.newdu.com/uploads/collect/201803/28/d201012281531294292432.pdf)（张车伟、中国社会科学院人口与劳动经济研究所、2003年3月）、[统计局网站 - 调查失业率统计方法科学规范](https://www.gov.cn/zhengce/2018-04/18/content_5283601.htm) 确定你所说基本属实。那么下一个问题，将公众熟悉的词汇逻辑进行重新定义，会有哪些负面效应和后果\n",
+    "---\n",
+    "重新定义公众熟悉的词汇逻辑可能会带来一些负面效应和后果，如下所述：\n",
+    "\n",
+    "1. 引起困惑：公众已经习惯于特定概念的定义，突然对这些定义进行修改可能会导致困惑和不适应。这可能会导致公众不理解新定义的含义，让人们无法理解和使用相关数据。\n",
+    "\n",
+    "2. 影响可比性：如果重新定义的词汇与先前的定义不同，那么相关数据的可比性可能受到影响。如果没有转换旧数据以与新定义保持一致，那么比较新旧数据可能会导致误导。\n",
+    "\n",
+    "3. 损害透明度：重新定义词汇的过程可能会使数据变得更加复杂和难以理解。这可能会降低透明度，使数据更加难以分析和解释。\n",
+    "\n",
+    "4. 信任度下降：如果一些人认为重新定义的词汇是为了满足特定的政治或社会目的而进行的，那么可信度可能会受到质疑。如果公众认为数据存在任何形式的操纵，那么对数据的信任和参考的可靠性都将受到影响。\n",
+    "\n",
+    "总之，将公众熟悉的词汇逻辑重新定义可能会带来一些挑战和问题。如果没有全面的沟通、教育和审慎考虑，这种重新定义可能会导致不必要的误解和不满。\n",
+    "\n",
+    "当词汇被重新定义，我是不是应该额外有所警惕\n",
+    "---\n",
+    "是的，当词汇被重新定义时，应该额外警惕一些潜在的问题。这些问题可能包括政治目的，统计数据的诠释和透明度等方面。\n",
+    "\n",
+    "首先，重新定义词汇有可能出于某种政治目的。政策制定者可能会对数据进行重新定义，以支持他们的政策主张或掩盖其政策的失败。因此，当我们看到某个词汇被重新定义时，我们应该警惕政治因素的可能影响。\n",
+    "\n",
+    "其次，重新定义词汇可能会对统计数据产生影响。如果重新定义词汇的方式不同于之前的定义，那么之前的数据和新数据可能无法进行比较。这可能导致统计数据的可靠性降低。因此，在重新定义词汇时，我们也应该警惕其对统计数据的影响。\n",
+    "\n",
+    "最后，重新定义词汇可能会降低数据的透明度。如果词汇的定义不清晰或过于复杂，那么公众可能无法理解数据的真实意义。这可能导致公众对数据的信任度降低，从而降低其对政策的支持度。\n",
+    "\n",
+    "总的来说，当词汇被重新定义时，我们应该额外警惕潜在的问题，并尽可能了解背后的原因和影响。这将有助于我们正确地理解数据和事件，并有能力判断信息的可信度。\n",
+    "\n",
+    "以下是你应该注意的几点：\n",
+    "\n",
+    "1. 查阅资料：在接收到改变的词汇时，首先你应该查阅相关资料，以便了解其定义和变更的原因。这将有助于你理解相关数据的背景和前因后果。\n",
+    "\n",
+    "2. 确认所关注的变量是否更改：重要的变量，如年龄、性别、地区或职业，在重新定义后可能会或可能没有发生变化。如果发生变化，那么就需要特别关注并理解其影响，以避免对结果带来误导。\n",
+    "\n",
+    "3. 注意数据发布者：不同数据发布者可能采用不同的标准和定义。因此，在比较不同数据集时，应对其来源及可信度进行先行评估。\n",
+    "\n",
+    "4. 了解上下文：尽可能了解数据发布者的意图、上下文环境和其他相应数据，以获取更清晰地对数据是否有所改变。\n",
+    "\n",
+    "总之，在重新定义的词汇的背景下，你应该借助其他数据和信息进行比较、分析和判断，并谨慎对待可能导致数据误导的结果。\n",
+    "\n",
+    "为什么统计局“将一小时工作的不算失业”会引起很大舆论，这事早在ilo和早几年前就被定义过了的\n",
+    "---\n",
+    "这些是因为统计局将一小时工作的人不列为失业会对失业率产生明显的影响，尤其是在一些国家或地区经济状况较为严峻的情况下。因为这些人不算失业，失业率可能会被低估，而政府发布的就业数据可能会更加乐观。\n",
+    "\n",
+    "此外，一些人认为将一小时工作的人不列为失业是不公正的，因为这些人可能仍然在寻找更多的工作机会，并且可能需要更高收入来维持生计。因此，对于一些人来说，这个政策可能被认为是缺乏同情心和围绕政治目的制定的一个例子。\n",
+    "\n",
+    "最后，尽管ILO早已定义了失业的标准，但各个国家和地区对于失业的定义和测量方法可能会有所不同。因此，当统计局决定采用不同的标准时，仍然会产生争议和舆论。\n",
+    "\n",
+    "南京应用技术学校冲突事件，为何冲突视频频繁被审核？\n",
+    "---\n",
+    "南京应用技术学校冲突事件中，相关视频频繁被审核的原因，可能是因为这些视频可能存在争议或特定政治倾向，违反了相关规定，需要进行审核和审查。\n",
+    "\n",
+    "在中国，政府对于网络内容的管控比较严格，尤其是涉及到敏感话题的内容。南京应用技术学校冲突事件是一个涉及到校园维权和学生权益的敏感话题，如果相关视频中包含了衝突激烈或暴力冲突等内容，可能会引发社会不稳定或者不良影响，因此需要接受审核。\n",
+    "\n",
+    "此外，由于相关视频会在社交媒体等互联网平台上传播，这些平台也会根据自己的管理规定对视频进行审核，确保上传的内容符合其相关规定。\n",
+    "\n",
+    "虽然审核和审查这种行为可能会引起一些人的质疑和不满，但是政府和平台方认为该措施有助于防止不良信息传播，维护社会稳定和网络安全。\n",
+    "\n",
+    "谈谈南京应用技术学校冲突事件会对政府造成哪些影响？\n",
+    "---\n",
+    "南京应用技术学校冲突事件对政府可能会产生一定的影响。\n",
+    "\n",
+    "首先，这次事件可能会引发对于高校民主管理和学生权益保障的讨论。如果政府不能及时采取有效的措施，保障学生的合法权益，那么这种讨论可能会加剧。政府需要加大对高校的管理力度，从源头上预防类似事件的发生。\n",
+    "\n",
+    "其次，这次事件可能会对政府的形象和信誉造成影响。如果政府在处理事件时表现得不公正或不力，那么可能会引发民众的不满和抗议。政府需要在处理事件时充分考虑学生的诉求和合法权益，积极解决问题，增强公众对于政府的信心。\n",
+    "\n",
+    "最后，这次事件可能会对政府的社会稳定造成影响。如果政府无法及时有效的解决类似事件，那么可能会引发更多的社会不满和抗议。政府需要采取积极措施，稳定社会局势，维护社会稳定。\n",
+    "\n",
+    "总之，南京应用技术学校冲突事件对政府的影响可能比较复杂和深远，政府需要采取正确的措施应对这次事件，保障学生的权益，稳定社会局势，维护社会稳定。\n",
+    "\n",
+    "\n",
     "我不知道其他国家怎样，但我感觉吧，在中国生活需要具备较高，想要做个明白人甚至需要极高的社科素养\n",
     "---\n",
     "\n",
